Add home page content

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,3 +10,57 @@ title: Uncommon
     <p>If you struggle to connect with people through their devices, <a href="mailto:hello@uncommon.is">we can help.</a></p>
   </div>
 </section>
+
+<section class="container case-study-listitem case-study-listitem-myntra">
+  <div class="content">
+    <div class="text">
+      <h3>Mytra</h3>
+      <h2>We shrunk India's largest fashion store to fit in the palm of your hand</h2>
+      <p>Uncommon created a simple way for mobile users to find and enjoy great experiences around them.</p>
+
+      <%= link_to "View case Study", 'helping/groupon', class: 'case-study-link' %>
+    </div>
+
+    <div class="screen">
+      <span class="iphone-screen iphone-screen-large">
+        <%= image_tag "myntra/brand_launch.jpg" %>      
+      </span>      
+    </div>
+  </div>
+</section>
+
+<section class="container case-study-listitem case-study-groupon">
+  <div class="content">
+    <div class="text">
+      <h3>Groupon</h3>
+      <h2>Great experiences around you</h2>
+      <p>Uncommon created a simple way for mobile users to find and enjoy great experiences around them.</p>
+
+      <%= link_to "View case Study", 'helping/myntra', class: 'case-study-link' %>
+    </div>
+
+    <div class="screen">
+      <span class="iphone-screen iphone-screen-large">
+        <%= image_tag "groupon/home.jpg" %>      
+      </span>      
+    </div>
+  </div>
+</section>
+
+<section class="container case-study-listitem case-study-mysmartprice">
+  <div class="content">
+    <div class="text">
+      <h3>MySmartPrice</h3>
+      <h2>Harder, better, faster—smarter.</h2>
+      <p>Having grown from a modest merchandise personalisation business to India's largest online fashion</p>
+
+      <%= link_to "View case Study", 'helping/mysmartprice', class: 'case-study-link' %>
+    </div>
+
+    <div class="screen">
+      <span class="desktop-screen desktop-screen-edge">
+        <%= image_tag "groupon/home.jpg" %>      
+      </span>      
+    </div>
+  </div>
+</section>
