--- a/source/stylesheets/components/_screens.scss
+++ b/source/stylesheets/components/_screens.scss
@@ -22,9 +22,10 @@
 
 .iphone-screen-large {
   width: 402px;
+  // width: 362px;
   height: 704px;
   padding: 90px 0 0 78px;
-  margin: -20px -80px 0 0;
+  margin: -20px -36px 0 0;
   background-image: image-url("devices/iphone_large_white.svg");
 
   img {
