Simplify screen list layout

--- a/source/helping/fisdom.html.erb
+++ b/source/helping/fisdom.html.erb
@@ -53,7 +53,7 @@ title: Fisdom Mobile Apps - Uncommon is helping Fisdom
 
   <section class="container article-section article-screen article-screen-list article-screen-list-large">
     <div class="content">
-      <ul class="screen-list iphone-screen-list">
+      <ul class="screen-list iphone-screen-list iphone-screen-list-large">
         <li class="iphone-screen-large"><%= image_tag "fisdom/visual_oomph_1.jpg" %></li>
         <li class="iphone-screen-large"><%= image_tag "fisdom/visual_oomph_2.jpg" %></li>
       </ul>
