--- a/source/stylesheets/components/_article_components.scss
+++ b/source/stylesheets/components/_article_components.scss
@@ -64,7 +64,7 @@
   @include span(8);
 }
 
-.article-screen-list .screen-list-large {
+.article-screen-list-large .screen-list {
   @include span(9);
 }
 
