Home page layout

--- a/source/stylesheets/base/_colors.scss
+++ b/source/stylesheets/base/_colors.scss
@@ -7,3 +7,5 @@ $red-pink: #f2396d;
 $tomato: #e23d2f;
 $orange-yellow: #fbb61b;
 $blue-with-a-hint-of-purple: #512da8;
+$teal-blue: #00a1b2;
+$turtle-green: #87be5d;
