--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,14 +11,14 @@ title: Uncommon
   </div>
 </section>
 
-<section class="container case-study-listitem case-study-listitem-myntra">
+<section class="container article-listitem article-listitem-myntra">
   <div class="content">
     <div class="text">
       <h3>Mytra</h3>
       <h2>We shrunk India's largest fashion store to fit in the palm of your hand</h2>
       <p>Uncommon created a simple way for mobile users to find and enjoy great experiences around them.</p>
 
-      <%= link_to "View case Study", 'helping/groupon', class: 'case-study-link' %>
+      <%= link_to "View case study", 'helping/myntra', class: 'article-link' %>
     </div>
 
     <div class="screen">
@@ -29,38 +29,58 @@ title: Uncommon
   </div>
 </section>
 
-<section class="container case-study-listitem case-study-groupon">
+<section class="container article-listitem article-listitem-groupon">
   <div class="content">
-    <div class="text">
-      <h3>Groupon</h3>
-      <h2>Great experiences around you</h2>
-      <p>Uncommon created a simple way for mobile users to find and enjoy great experiences around them.</p>
-
-      <%= link_to "View case Study", 'helping/myntra', class: 'case-study-link' %>
-    </div>
-
     <div class="screen">
       <span class="iphone-screen iphone-screen-large">
         <%= image_tag "groupon/home.jpg" %>      
       </span>      
     </div>
+
+    <div class="text">
+      <h3>Groupon</h3>
+      <h2>Great experiences around you</h2>
+      <p>Uncommon created a simple way for mobile users to find and enjoy great experiences around them.</p>
+
+      <%= link_to "View case study", 'helping/myntra', class: 'article-link' %>
+    </div>
   </div>
 </section>
 
-<section class="container case-study-listitem case-study-mysmartprice">
+<section class="container article-listitem article-listitem-fisdom">
+  <div class="content">
+    <div class="text">
+      <h3>Fisdom</h3>
+      <h2>Who says investing can't be fun!</h2>
+      <p>We gave Fisdom’s Android and iOS apps a fun twist to make it appealing to a young userbase.</p>
+
+      <%= link_to "View case study", 'helping/fisdom', class: 'article-link' %>
+    </div>
+
+    <div class="screen">
+      <span class="iphone-screen iphone-screen-large">
+        <%= image_tag "fisdom/investment.jpg" %>      
+      </span>      
+    </div>
+  </div>
+</section>
+
+<!-- 
+<section class="container article-listitem article-listitem-mysmartprice">
   <div class="content">
     <div class="text">
       <h3>MySmartPrice</h3>
       <h2>Harder, better, faster—smarter.</h2>
       <p>Having grown from a modest merchandise personalisation business to India's largest online fashion</p>
 
-      <%= link_to "View case Study", 'helping/mysmartprice', class: 'case-study-link' %>
+      <%= link_to "View case study", 'helping/mysmartprice', class: 'article-link' %>
     </div>
 
     <div class="screen">
       <span class="desktop-screen desktop-screen-edge">
-        <%= image_tag "groupon/home.jpg" %>      
+        <%= image_tag "mysmartprice/home_crop.jpg" %>      
       </span>      
     </div>
   </div>
 </section>
+ -->
