--- a/source/stylesheets/pages/_groupon.scss
+++ b/source/stylesheets/pages/_groupon.scss
@@ -1,3 +1,21 @@
+.article-listitem-groupon {
+  $primary-color: $turtle-green;
+
+  h3,
+  .article-link {
+    color: $primary-color;
+  }
+
+  .screen {
+    position: relative;
+  }
+
+  .screen::before {
+    background: $primary-color;
+    transform: rotate(0deg) scale(0.9) skew(6deg);
+  }
+}
+
 .helping_groupon #home-link a::before {
   background: $red-pink;
 }
