--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -9,6 +9,7 @@
 
 @import "components/home_link";
 
+@import "components/article_list";
 @import "components/article_sections";
 @import "components/article_components";
 @import "components/article_images";
@@ -23,3 +24,4 @@
 @import "pages/groupon";
 @import "pages/myntra";
 @import "pages/fisdom";
+@import "pages/mysmartprice";
