--- a/source/stylesheets/pages/_groupon.scss
+++ b/source/stylesheets/pages/_groupon.scss
@@ -7,12 +7,7 @@
   }
 
   .screen {
-    position: relative;
-  }
-
-  .screen::before {
-    background: $primary-color;
-    transform: rotate(0deg) scale(0.9) skew(6deg);
+    background-image: image-url("home/groupon_bg.svg");
   }
 }
 
