--- a/source/stylesheets/pages/_myntra.scss
+++ b/source/stylesheets/pages/_myntra.scss
@@ -7,12 +7,7 @@
   }
 
   .screen {
-    position: relative;
-  }
-
-  .screen::before {
-    background: $primary-color;
-    transform: rotate(-5deg) scale(0.913) skew(-12deg);
+    background-image: image-url("home/myntra_bg.svg");
   }
 }
 
