Add extra wide image to myntra home page

--- a/source/helping/myntra.html.erb
+++ b/source/helping/myntra.html.erb
@@ -90,13 +90,9 @@ title: Myntra Mobile App - Uncommon is helping Myntra
 
       <p>Sometimes even strong teams need a helping hand to achieve great results. As free agents, we bring a fresh perspective to the table and integrate with teams to balance competing interests and help get things done. With an entity as large as Myntra that ships 20,000 orders daily to over 400 cities, it was important for us to break down systemic inertia, ask hard questions and draw our collective focus towards building an amazing product -- and our years of experience working with teams of all sizes stood us in good stead.</p>
     </div>
-  </section>
 
-<!--   <section class="container article-section article-image article-image-full">
-    
-  </section> -->
+    <%= image_tag "myntra/product_view.jpg", class: "image-extrawide" %>
 
-  <section class="container article-section article-text">
     <div class="content">
       <p>To inform our ideas for the look and feel of the store, we researched a variety of luxury brands and fashion houses. The result is a minimalist interface that boldly showcases high fashion imagery and complements the wide range of brands, from exclusive boutiques to trendy sporting goods purveyors. At the same time, it remains easy to use, whether you're browsing new looks for the season or hunting down that one dream accessory to tie your stunning new outfit together.</p>
       <p>What we ended up building together with Myntra is not just another mobile store, but rather a new shopping experience that inspires fashion enthusiasts to express themselves with style statements that are all their own.</p>
