--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -42,7 +42,7 @@ title: Uncommon
       <h2>Great experiences around you</h2>
       <p>Uncommon created a simple way for mobile users to find and enjoy great experiences around them.</p>
 
-      <%= link_to "View case study", 'helping/myntra', class: 'article-link' %>
+      <%= link_to "View case study", 'helping/groupon', class: 'article-link' %>
     </div>
   </div>
 </section>
