--- a/source/stylesheets/components/_article_images.scss
+++ b/source/stylesheets/components/_article_images.scss
@@ -7,3 +7,10 @@
   //   margin: 20px span(-2 wide of 8);
   // }
 }
+
+.image-extrawide {
+  display: block;
+  position: relative;
+  width: 120%;
+  margin-left: -10%
+}
