--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -7,7 +7,7 @@
   .content {
     display: block;
     position: relative;
-    padding: 180px 269px;
+    padding: 100px 270px 160px 270px;
     color: $white;
 
     a {
