Added status bar images to Myntra

--- a/source/helping/myntra.html.erb
+++ b/source/helping/myntra.html.erb
@@ -88,6 +88,8 @@ title: Myntra Mobile App - Uncommon is helping Myntra
 
       <p>Our programming ethos centers around our in-depth understanding of the way users interact with the web and mobile devices. With the Myntra store, we were conscious of the fact that Indian smartphone users worry about battery life and have to put up with spotty network connectivity, even in urban areas. That's why we worked with the Myntra engineers to tweak backend services so that the app makes as few network calls as possible. We also ensured that large portions of data were cached on the device, thereby reducing dependency on carrier coverage and conserving power.</p>
 
+      <%= image_tag "myntra/statusbar.svg", class: "image-fullwidth" %>
+
       <p>Sometimes even strong teams need a helping hand to achieve great results. As free agents, we bring a fresh perspective to the table and integrate with teams to balance competing interests and help get things done. With an entity as large as Myntra that ships 20,000 orders daily to over 400 cities, it was important for us to break down systemic inertia, ask hard questions and draw our collective focus towards building an amazing product -- and our years of experience working with teams of all sizes stood us in good stead.</p>
     </div>
 
