--- a/source/stylesheets/components/_article_images.scss
+++ b/source/stylesheets/components/_article_images.scss
@@ -1,5 +1,8 @@
 .image-fullwidth {
   @include span(12);
+  margin-top: 8px;
+  margin-bottom: 20px;
+
 
   // .article-text & {
   //   position: relative;
