--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,8 +14,8 @@ title: Uncommon
 <section class="container article-listitem article-listitem-myntra">
   <div class="content">
     <div class="text">
-      <h3>Mytra</h3>
-      <h2>We shrunk India's largest fashion store to fit in the palm of your hand</h2>
+      <h3>Myntra</h3>
+      <h2>We shrunk India&rsquo;s largest fashion store to fit in the palm of your hand</h2>
       <p>Uncommon created a simple way for mobile users to find and enjoy great experiences around them.</p>
 
       <%= link_to "View case study", 'helping/myntra', class: 'article-link' %>
@@ -51,8 +51,8 @@ title: Uncommon
   <div class="content">
     <div class="text">
       <h3>Fisdom</h3>
-      <h2>Who says investing can't be fun!</h2>
-      <p>We gave Fisdom’s Android and iOS apps a fun twist to make it appealing to a young userbase.</p>
+      <h2>Who says investing can&rsquo;t be fun!</h2>
+      <p>We gave Fisdom&rsquo;s Android and iOS apps a fun twist to make it appealing to a young userbase.</p>
 
       <%= link_to "View case study", 'helping/fisdom', class: 'article-link' %>
     </div>
@@ -71,7 +71,7 @@ title: Uncommon
     <div class="text">
       <h3>MySmartPrice</h3>
       <h2>Harder, better, faster—smarter.</h2>
-      <p>Having grown from a modest merchandise personalisation business to India's largest online fashion</p>
+      <p>Having grown from a modest merchandise personalisation business to India&rsquo;s largest online fashion</p>
 
       <%= link_to "View case study", 'helping/mysmartprice', class: 'article-link' %>
     </div>
