Add about & footer to homepage

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -84,3 +84,17 @@ title: Uncommon
   </div>
 </section>
  -->
+
+ <section class="container about">
+   <p>We all have a reason for showing up every day. Some do it for money. Others out of habit. At uncommon, we show up because we want to make stuff that matters. Simple things. Honest things. Beautiful things. Every day, we want to make things that affect people in positive ways.</p>
+ </section>
+
+ <footer class="container branches">
+   <h2>uncommon</h2>
+   <ul>
+     <li>Ahmedabad</li>
+     <li>Bangalore</li>
+     <li>Chandigarh</li>
+     <li>Hyderabad</li>
+   </ul>
+ </footer>
