temporarily replace slideshow on groupon with a simple list

--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -105,7 +105,27 @@ title: Groupon Go App - Uncommon is helping Groupon
     </div>
   </section>
 
-  <section class="container article-section article-screen article-screen-slideshow">
+  <section class="container article-section article-screen article-screen-list">
+    <div class="content">
+      <div class="article-section-caption">
+        <h2>Seamless Payment Flow</h2>
+        <p>The payment flow is seamless, which makes it pleasant for the users. At the same time, for Groupon this works very well as there are fewer drop-offs.</p>
+      </div>
+      <ul class="screen-list iphone-screen-list">
+        <li class="iphone-screen iphone-screen-list">
+          <%= image_tag "groupon/payment_01.jpg" %>
+        </li>
+        <li class="iphone-screen iphone-screen-list">
+          <%= image_tag "groupon/payment_02.jpg" %>
+        </li>
+        <li class="iphone-screen iphone-screen-list">
+          <%= image_tag "groupon/payment_03.jpg" %>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+<!--   <section class="container article-section article-screen article-screen-slideshow">
     <div class="content">
       <div class="article-section-caption">
         <h2>Seamless Payment Flow</h2>
@@ -126,5 +146,5 @@ title: Groupon Go App - Uncommon is helping Groupon
         </li>
       </ul>
     </div>
-  </section>
+  </section> -->
 </main>
