--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -6,13 +6,36 @@ body.index {
   margin-top: 10px;
   padding-top: 10px;
   padding-bottom: 40px;
-  background: transparent image-url("home/banner_bg.svg") no-repeat top center;
+  background: transparent image-url("home/banner_bg.svg") no-repeat center center;
+  background-size: 98% 98%;
   
+  @include breakpoint($screen-tablet) {
+    padding-bottom: 24px;
+  }
+
+  @include breakpoint($screen-tablet) {
+    padding-bottom: 16px;
+  }
+
   .content {
     display: block;
     position: relative;
-    padding: 100px 270px 160px 270px;
+    clear: both;
+
+    padding: 80px 270px 120px 270px;
     color: $white;
+
+    @include breakpoint($screen-tablet) {
+      padding: 40px 120px 120px 120px;
+    }
+
+    @include breakpoint($screen-stablet) {
+      padding: 40px 80px 60px 80px;
+    }
+
+    @include breakpoint($screen-mobile) {
+      padding: 20px 20px 40px 20px;
+    }
 
     a {
       color: tomato;
@@ -23,15 +46,25 @@ body.index {
 .about {
   margin-top: 60px;
   margin-bottom: 60px;
-  padding: 10% 0 30% 0;
+  padding: 10vw 0 36vw 0;
 
   border-top: solid 1px rgba($black, 0.15);
   background: transparent image-url("about/team.jpg") no-repeat bottom center;
   background-size: 100% auto;
 
+  @include breakpoint($screen-stablet) {
+    padding-bottom: 160vw;
+    background-image: image-url("about/team-mobile.jpg");
+  }
+
+
   p {
     @include span(8);
     @include pre(1);
+
+    @include breakpoint($screen-stablet) {
+      @include span(10);
+    }
   }
 }
 
