--- a/source/stylesheets/components/_article_components.scss
+++ b/source/stylesheets/components/_article_components.scss
@@ -3,11 +3,15 @@
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 600;
-  margin: 9px 0 18px 0;
+  margin: 1vw 0 2vw 0;
 
   a {
     color: $white;
     text-decoration: none;
+
+    @include breakpoint($screen-mobile) {
+      display: block;
+    }
   }
 }
 
