--- a/source/stylesheets/pages/_groupon.scss
+++ b/source/stylesheets/pages/_groupon.scss
@@ -25,7 +25,7 @@
   .article-title,
   .article-subtitle {
     color: $white;
-    margin-top: 16px;
+    margin-top: 1.5vw;
     margin-bottom: 0;
     padding: 0;
   }
