Responsive layout: Groupon case study

--- a/source/stylesheets/base/_grid.scss
+++ b/source/stylesheets/base/_grid.scss
@@ -15,12 +15,12 @@ $susy: (
 );
 
 // Breakpoints
-$screen-xxsmall: max-width 24em;
-$screen-xsmall: max-width 30em;
-$screen-small: max-width 40em;
-$screen-medium: max-width 60em;
-$screen-large: max-width 80em;
-$screen-xlarge: max-width 100em;
+$screen-xxsmall: 24em;
+$screen-xsmall: 30em;
+$screen-small: 40em;
+$screen-medium: 60em;
+$screen-large: 80em;
+$screen-xlarge: 100em;
 
 $screen-xxsmall-xsmall: 24em 30em;
 $screen-xsmall-small: 30em 40em;
@@ -28,9 +28,13 @@ $screen-small-medium: 40em 60em;
 $screen-medium-large: 60em 80em;
 $screen-large-xlarge: 80em 100em;
 
-$screen-mobile: $screen-xsmall;
-$screen-stablet: $screen-small;
-$screen-tablet: $screen-medium;
+$screen-mobile: max-width $screen-xsmall;
+$screen-stablet: max-width $screen-small;
+$screen-tablet: max-width $screen-medium;
+
+$over-screen-mobile: min-width $screen-xsmall;
+$over-screen-stablet: min-width $screen-small;
+$over-screen-tablet: min-width $screen-medium;
 
 
 @include border-box-sizing;
