--- a/source/stylesheets/components/_screen_list.scss
+++ b/source/stylesheets/components/_screen_list.scss
@@ -1,21 +1,31 @@
 .screen-list {
   margin: 0;
   padding: 0;
+  text-align: center;
 
   li {
-    display: block;
-    float: left;
+    display: inline-block;
   }
 }
 
-.iphone-screen-list {
-  li {
-    &:nth-child(3n+1) {
-      margin-left: -30px;
+@include breakpoint($over-screen-tablet) {
+  .screen-list {
+    li {
+      display: block;
+      float: left;
+    }
+  }
+
+  .iphone-screen-list {
+    li {
+      &:nth-child(3n+1) {
+        margin-left: -30px;
+      }
+
+      &:nth-child(3n) {
+        margin-right: -30px;
+      }
     }
 
-    &:nth-child(3n) {
-      margin-right: -30px;
-    }
   }
 }
