Responsive layout: Myntra case study

--- a/source/stylesheets/components/_article_sections.scss
+++ b/source/stylesheets/components/_article_sections.scss
@@ -37,7 +37,7 @@
     clear: both;
 
     content: "";
-    margin: 50px 0 50px span(2 wide);
+    margin: 3vw 0 3vw span(2 wide);
     border-left: solid 60px $black;
     height: 4px;
 
