--- a/source/stylesheets/components/_screens.scss
+++ b/source/stylesheets/components/_screens.scss
@@ -24,7 +24,6 @@
   width: 402px;
   height: 704px;
   padding: 90px 66px 0 78px;
-  // margin: -20px -40px 0 -40px;
   background-image: image-url("devices/iphone_large_white.svg");
 
   img {
@@ -36,5 +35,10 @@
 
   figcaption {
     text-align: center;
+  }
+
+  @include breakpoint($screen-mobile) {
+    // margin: -20px -40px 0 -40px;
+    // width: 100vw;
   }
 }
