--- a/source/stylesheets/pages/_fisdom.scss
+++ b/source/stylesheets/pages/_fisdom.scss
@@ -36,7 +36,7 @@ body.helping_fisdom {
 
   .article-title {
     @include span(7);
-    font-size: 54px;
+    font-size: 5vw;
     font-weight: 800;
     line-height: 1.1;
 
@@ -52,6 +52,10 @@ body.helping_fisdom {
     line-height: 1.5em;
     font-weight: 400;
     color: $black;
+
+    @include breakpoint($screen-stablet) {
+      display: none;
+    }
   }
 
   .breadcrumbs {
