--- a/source/stylesheets/components/_article_list.scss
+++ b/source/stylesheets/components/_article_list.scss
@@ -2,6 +2,8 @@
   display: block;
   clear: both;
   padding-top: 40px;
+  padding: 40px 0 0 0;
+  overflow: hidden;
 
   .text {
     @include span(7);
@@ -90,6 +92,19 @@
 
     .iphone-screen {
       margin: 6px auto;
+    }
+  }
+
+  @include breakpoint($screen-mobile) {
+    .text {
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+
+    .iphone-screen {
+      // position: absolute;
+      left: 50%;
+      margin-left: -201px;
     }
   }
 }
