--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -16,12 +16,8 @@ h1 {
 
 h2 {
   font-weight: 600;
-  font-size: 21px;
+  font-size: 4.5vw;
   line-height: 1.2;
-
-  @include breakpoint($screen-tablet) {
-    font-size: 18px;
-  }
 }
 
 p,
@@ -30,4 +26,14 @@ ol,
 li {
   font-size: 18px;
   line-height: 1.8;
+}
+
+@include breakpoint($screen-mobile) {
+  h1 {
+    font-size: 10vw;
+  }
+
+  h2 {
+
+  }
 }
