--- a/source/stylesheets/components/_screens.scss
+++ b/source/stylesheets/components/_screens.scss
@@ -38,7 +38,7 @@
   }
 
   @include breakpoint($screen-mobile) {
-    // margin: -20px -40px 0 -40px;
-    // width: 100vw;
+    left: 50%;
+    margin-left: -201px;
   }
 }
