--- a/source/stylesheets/components/_article_sections.scss
+++ b/source/stylesheets/components/_article_sections.scss
@@ -2,14 +2,13 @@
   display: block;
   position: relative;
   width: 100%;
-  height: 0;
   width: 100%;
   margin: 0;
   padding: 60% 0 0 0;
 
   background-color: transparent;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: top center;
   background-size: 100% auto;
 
   .hero-section-content {
@@ -132,6 +131,10 @@
 
 .article-metadata {
   margin-top: 50px;
+
+  @include breakpoint($screen-mobile) {
+    margin-top: 0;
+  }
 }
 
 .article-metadata .content {
