Mobile layout: article page (Fisdom)

--- a/source/stylesheets/components/_screen_list.scss
+++ b/source/stylesheets/components/_screen_list.scss
@@ -5,6 +5,11 @@
 
   li {
     display: inline-block;
+
+    @include breakpoint($screen-mobile) {
+      display: block;
+      position: relative;
+    }
   }
 }
 
