--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -16,7 +16,7 @@ h1 {
 
 h2 {
   font-weight: 600;
-  font-size: 4.5vw;
+  font-size: 21px;
   line-height: 1.2;
 }
 
@@ -34,6 +34,6 @@ li {
   }
 
   h2 {
-
+    font-size: 4.5vw;
   }
 }
