Changed Typography to use a kit from Typeset.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,8 +8,8 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Uncommon" %></title>
 
-    <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-
+    <script src="https://use.typekit.net/wos3rrw.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag :all %>
   </head>
