--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -1,5 +1,5 @@
-$sans: "Avenir Next", sans-serif; 
-$serif: "Chaparral Pro", serif;
+$sans: freight-sans-pro, "Freight Sans Pro", sans-serif; 
+$serif: chaparral-pro, "Chaparral Pro", serif;
 
 body {
   font-family: $sans;
