--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -37,3 +37,13 @@ li {
     font-size: 4.5vw;
   }
 }
+
+@include breakpoint($screen-xlarge) {
+  h1 {
+    font-size: 30px;
+  }
+
+  h2 {
+    font-size: 21px;
+  }
+}
