--- a/source/stylesheets/components/_stats.scss
+++ b/source/stylesheets/components/_stats.scss
@@ -18,7 +18,7 @@
     padding: 0;
     @include span(3);
     font-size: 14px;
-    line-height: 1em;
+    line-height: 0.5em;
     text-transform: uppercase;
 
     &:nth-child(4n) {
@@ -29,19 +29,16 @@
       font-size: 10vw;
       font-weight: 600;
       display: block;
-      line-height: 1em;
+      line-height: 0.8em;
     }
 
     span {
+      display: block;
       font-size: 3vw;
+      padding-top: 2vw;
+      line-height: 1em;
       font-weight: 400;
       text-transform: lowercase;
-    }
-
-    @include breakpoint($screen-tablet) {
-      strong {
-        // font-size: ;
-      }
     }
   }
 }
