Change myntra home page photo

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,7 +14,7 @@ title: Uncommon
 <section class="container article-listitem article-listitem-myntra">
     <div class="screen">
       <span class="iphone-screen iphone-screen-large">
-        <%= image_tag "myntra/brand_launch.jpg" %>      
+        <%= image_tag "myntra/search.jpg" %>      
       </span>      
     </div>
   </div>
