--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ title: Uncommon
 
 <section class="container uncommon-intro">
   <div class="content">
-    <p>We help startups and established companies like Flipkart, TCS, Groupon, Newshunt, Swiggy and IBM design and build digital products for human beings.</p>
+    <p>We help startups and established companies like Flipkart, Tata Consultancy Services, Groupon, Newshunt, Swiggy and IBM design and build digital products for human beings.</p>
     <p>If you struggle to connect with people through their devices, <a href="mailto:hello@uncommon.is">we can help.</a></p>
   </div>
 </section>
