--- a/source/stylesheets/components/_article_list.scss
+++ b/source/stylesheets/components/_article_list.scss
@@ -75,6 +75,10 @@
     text-decoration: none;
     border-bottom: solid 1px;
     margin-bottom: 12px;
+
+    &::after {
+      content: " \00bb";
+    }
   }
 
   @include breakpoint($screen-tablet) {
