Fix: On large monitors, there is too much space in the footer

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -63,6 +63,10 @@ body.index {
     background-image: image-url("about/team-mobile.jpg");
   }
 
+  @include breakpoint($over-screen-tablet) {
+    padding: 100px 0 420px 0;
+  }
+
 
   p {
     @include span(8);
