Fix: Home Page copy issue
Removed duplicate description text for Myntra case study

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,8 +22,8 @@ title: Uncommon
   <div class="content">
     <div class="text">
       <h3>Myntra</h3>
-      <h2>We shrunk India&rsquo;s largest fashion store to fit in the palm of your hand</h2>
-      <p>Uncommon created a simple way for mobile users to find and enjoy great experiences around them.</p>
+      <h2>Clothes, to go</h2>
+      <p>We shrunk India&rsquo;s largest fashion store to fit in the palm of your hand</p>
 
       <%= link_to "View case study", 'helping/myntra', class: 'article-link' %>
     </div>
