Removed link to work page from case studies

--- a/source/helping/fisdom.html.erb
+++ b/source/helping/fisdom.html.erb
@@ -9,7 +9,7 @@ title: Fisdom Mobile Apps - Uncommon is helping Fisdom
     <div class="hero-section-content">
       <div class="article-header">
         <nav class="breadcrumbs">
-            <a href="/helping">Recent Work</a> /
+            <a href="#">Recent Work</a> /
             <span>Fisdom: Mobile Apps</span>
         </nav>
 
