--- a/source/helping/groupon.html.erb
+++ b/source/helping/groupon.html.erb
@@ -9,7 +9,7 @@ title: Groupon Go App - Uncommon is helping Groupon
     <div class="hero-section-content">
       <div class="article-header">
         <nav class="breadcrumbs">
-          <a href="/helping">Recent Work</a> /
+          <a href="#">Recent Work</a> /
           <span>Groupon Go Mobile App</span>
         </nav>
 
