--- a/source/helping/myntra.html.erb
+++ b/source/helping/myntra.html.erb
@@ -9,7 +9,7 @@ title: Myntra Mobile App - Uncommon is helping Myntra
     <div class="hero-section-content">
       <div class="article-header">
         <nav class="breadcrumbs">
-          <a href="/helping">Recent Work</a> /
+          <a href="#">Recent Work</a> /
           <span>Myntra: Mobile Apps</span>
         </nav>
 
