--- a/source/stylesheets/components/_stats.scss
+++ b/source/stylesheets/components/_stats.scss
@@ -17,7 +17,7 @@
     margin: 3vw 0;
     padding: 0;
     @include span(3);
-    font-size: 14px;
+    font-size: 1.5vw;
     line-height: 0.5em;
     text-transform: uppercase;
 
@@ -39,6 +39,18 @@
       line-height: 1em;
       font-weight: 400;
       text-transform: lowercase;
+    }
+
+    @include breakpoint($screen-xlarge) {
+      font-size: 16px;
+
+      strong {
+        font-size: 160px;
+      }
+
+      span {
+        font-size: 48px;
+      }
     }
   }
 }
