--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -50,48 +50,40 @@ body.index {
 }
 
 .about {
-  margin-top: 60px;
-  margin-bottom: 60px;
-  padding: 10vw 0 36vw 0;
-
-  border-top: solid 1px rgba($black, 0.15);
-  background: transparent image-url("about/team.jpg") no-repeat bottom center;
-  background-size: 100% auto;
-
-  @include breakpoint($screen-stablet) {
-    padding-bottom: 160vw;
-    background-image: image-url("about/team-mobile.jpg");
-  }
-
-  @include breakpoint($over-screen-tablet) {
-    padding: 100px 0 420px 0;
-  }
-
-
+  padding: 0;
+  
   p {
-    @include span(8);
-    @include pre(1);
+    margin-top: 60px;
+    margin-bottom: 60px;
+    padding: 10vw 10vw 36vw 10vw;
+
+    border-top: solid 1px rgba($black, 0.15);
+    background: transparent image-url("about/team.jpg") no-repeat bottom center;
+    background-size: 100% auto;
 
     @include breakpoint($screen-stablet) {
-      @include span(10);
+      padding-bottom: 160vw;
+      background-image: image-url("about/team-mobile.jpg");
+    }
+
+    @include breakpoint($over-screen-tablet) {
+      padding: 100px 100px 420px 100px;
     }
   }
-}
-
-.branches {
-  text-align: center;
-  text-transform: lowercase;
-  margin-top: 100px;
-  margin-bottom: 100px;
 
   h2 {
+    text-align: center;
+    text-transform: lowercase;
+    margin-top: 100px;
     font-size: 24px;
   }
 
   ul {
     list-style-type: none;
+    text-align: center;
     padding: 0;
     margin: 0;
+    margin-bottom: 100px;
   }
 
   li {
