--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 @import "susy";
 @import "breakpoint";
 
@@ -10,18 +11,20 @@
 @import "components/home_link";
 
 @import "components/article_list";
-@import "components/article_sections";
-@import "components/article_components";
-@import "components/article_images";
+// @import "components/article_sections";
+// @import "components/article_components";
+// @import "components/article_images";
 
 @import "components/screens";
-@import "components/screen_list";
-@import "components/screen_slideshow";
+// @import "components/screen_list";
+// @import "components/screen_slideshow";
+
+@import "components/case_studies";
 
 @import "components/stats";
 
 @import "pages/home";
-@import "pages/groupon";
-@import "pages/myntra";
-@import "pages/fisdom";
-@import "pages/mysmartprice";
+// @import "pages/groupon";
+// @import "pages/myntra";
+// @import "pages/fisdom";
+// @import "pages/mysmartprice";
